Added speed controls

--- a/bin/data/config.json
+++ b/bin/data/config.json
@@ -1,5 +1,5 @@
 {
-    "audiodirectory": "sounds"
-    "startupsound":"startup.wav"
-    "audiochannels": 4,
+    "audiodirectory": "sounds",
+    "startupsound":"startup.wav",
+    "audiochannels": 4
  }
