--- a/bin/data/config.json
+++ b/bin/data/config.json
@@ -1,6 +1,6 @@
 {
     "altconfig": "/home/sonic/bicrophonic1/config.json",
-    "audio_path": "sounds",
+    "audio_path": "sounds/",
     "audio_startup":"startup.wav",
     "audio_channels": 200,
     "audio_log": "audio.log",
