--- a/bin/data/config.json
+++ b/bin/data/config.json
@@ -4,5 +4,5 @@
     "audio_startup":"startup.wav",
     "audio_channels": 200,
     "audio_log": "audio.log",
-    "debug":"true"
+    "debug":"false"
 }
